revert: "fix: remove usage of deprecated URL constructor"
This reverts commit 59f4eaa027d050f462ce70c4f739171dc7aef252.